# Sistema-bancario-qt

./: .gitignore  CMakeLists.txt  README.md  banco.cpp  banco.hpp  banco_dados.cpp  banco_dados.hpp  desenv.qrc  dialogcadastro.cpp  dialogcadastro.h  dialogcadastro.ui  dialogconta.cpp  dialogconta.h  dialogconta.ui  dialogsobre.cpp  dialogsobre.h  dialogsobre.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pessoa.cpp  pessoa.hpp
